# Infopedia-Web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  connection.py  create_tables.py  database.py  docker-compose.yml  enums.py  image_utils.py  loader.py  logging_settings.py  main.py  models.py  nlp.py  prepare_app.py  pyproject.toml  repository.py  ruff.toml  schemas.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
routers/: users.py
src/: config.py  database.py  loader.py  logging_settings.py  main.py  models.py  prepare_app.py  redis_client.py
src/analyze/: client.py  enums.py  exceptions.py  models.py  parser.py  repository.py  router.py  schemas.py  serialization.py  service.py  utils.py  validation.py
src/auth/: constants.py  dependencies.py  emailer.py  models.py  repository.py  router.py  schemas.py  utils.py
src/celery_app/: analyze_task.py  analyze_worker.py  app.py  email_task.py  email_worker.py  search_task.py  search_worker.py
src/search/: router.py  schemas.py  service.py
src/terms/: models.py  repository.py  router.py  schemas.py  service.py
src/topics/: migrations.py  models.py  repository.py  router.py  schemas.py
src/users/: enums.py  errors.py  models.py  repository.py  (+3 more)
tests/: test_analyze_celery_serialization.py  test_analyze_repository.py  test_analyze_validation.py  test_google_oauth.py  test_google_oauth_network.py  test_loader_book_keys.py  test_password_reset_flow.py  test_schema_migrations.py
(+35 files in other folders)
