[project]
name = "infopedia-web"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
]

[tool.ruff]
extend = "C:/Users/roman/AppData/Roaming/ruff/ruff.toml"
